--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,15 @@
 .App-link {
   color: #09d3ac;
 }
+
+#map {
+        height: 50%;
+        width: 50%;
+        margin: auto;
+      }
+      /* Optional: Makes the sample page fill the window. */
+html, body {
+	    height: 100%;
+	    margin:auto;
+	    padding: 0;
+	  }
