--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
         height: 50%;
         width: 50%;
         margin: auto;
+        margin-bottom: 20px;
       }
       /* Optional: Makes the sample page fill the window. */
 html, body {
@@ -33,3 +34,7 @@ html, body {
 	    margin:auto;
 	    padding: 0;
 	  }
+	  
+.col-sm-8 {
+	margin: auto;
+}
